--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                     <label class="labelAfter">
                     <select class="selectpicker1" data-width="fit">
                         <option>ENG</option>
-                        <option>FR</option>
                     </select>
                     </label>
                 </div>
@@ -45,11 +44,11 @@
                     <hr class="hr-navbarMenu">
                     <ul>
                         <li><a href="index.html" class="active">HOME</a></li>
-                        <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                         <li><a href="reqruitment.html">RECRUITMENT</a></li>
                         <li><a href="partners.html">PARTNERS</a></li>
+                        <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="contact.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -62,9 +61,9 @@
                     <div class="col-md-12">
                     <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-1.png" alt="test"></div>
                         <div class="col-md-6 col-sm-12 col-xs-12">
-                            <h1>WEB DESIGN</h1>
+                            <h1>Application and Softwere</h1>
                             <h3>Choose a hight-performance communication medium</h3>
-                            <a href="#">
+                            <a href="ourService.html">
                                 <button type="button" name="button" class="button">VIEW MORE</b></button></a>
                         </div>
                     </div>
@@ -73,10 +72,82 @@
                     <div class="col-md-12">
                         <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-2.png" alt=""></div>
                         <div class="col-md-6 col-sm-12 col-xs-12">
-                            <h1>WEB DESIGN</h1>
+                            <h1>Web Creation</h1>
                             <h3>Choose a hight-performance communication medium</h3>
-                            <a href="#">
+                            <a href="ourService.html">
                             <button type="button" name="button" class="button">VIEW MORE</b></button></a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-12">
+                        <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-1.png" alt=""></div>
+                        <div class="col-md-6 col-sm-12 col-xs-12">
+                            <h1>Search Engine Optimisation</h1>
+                            <h3>Choose a hight-performance communication medium</h3>
+                            <a href="ourService.html">
+                                <button type="button" name="button" class="button">VIEW MORE</b></button></a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-12">
+                        <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-2.png" alt=""></div>
+                        <div class="col-md-6 col-sm-12 col-xs-12">
+                            <h1>Web Hosting</h1>
+                            <h3>Choose a hight-performance communication medium</h3>
+                            <a href="ourService.html">
+                                <button type="button" name="button" class="button">VIEW MORE</b></button></a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="item">
+                <div class="col-md-12">
+                    <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-1.png" alt=""></div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <h1>Security, System, Network</h1>
+                        <h3>Choose a hight-performance communication medium</h3>
+                        <a href="ourService.html">
+                            <button type="button" name="button" class="button">VIEW MORE</b></button></a>
+                    </div>
+
+                </div>
+            </div>
+                <div class="item">
+                <div class="col-md-12">
+                    <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-2.png" alt=""></div>
+                    <div class="col-md-6 col-sm-12 col-xs-12">
+                        <h1>VOIP Telephone and Callface</h1>
+                        <h3>Choose a hight-performance communication medium</h3>
+                        <a href="ourService.html">
+                            <button type="button" name="button" class="button">VIEW MORE</b></button></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="item">
+            <div class="col-md-12">
+                <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-1.png" alt=""></div>
+                <div class="col-md-6 col-sm-12 col-xs-12">
+                    <h1>Security Access</h1>
+                    <h3>Choose a hight-performance communication medium</h3>
+                    <a href="ourService.html">
+                        <button type="button" name="button" class="button">VIEW MORE</b></button></a>
+                </div>
+
+            </div>
+            </div>
+                <div class="item">
+                    <div class="col-md-12">
+                        <div class="col-md-6 col-sm-12 col-xs-12"><img class="img-responsive" src="img/slayd-2.png" alt=""></div>
+                        <div class="col-md-6 col-sm-12 col-xs-12">
+                            <h1>Controll and allarm</h1>
+                            <h3>Choose a hight-performance communication medium</h3>
+                            <a href="ourService.html">
+                                <button type="button" name="button" class="button">VIEW MORE</b></button></a>
                         </div>
 
                     </div>
@@ -104,7 +175,7 @@
                     All of our business solutions are based on the use of the most advanced technologies and are designed
                     to sustainably meet the expectations and needs of our customers.
                 </p>
-                <a href="#">
+                <a href="about.html">
                     <button type="button" name="button" class="button-more">VIEW MORE</b></button></a>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
@@ -125,11 +196,8 @@
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
                     <h4>Application and Softwere</h4>
-                    <p>Search engine optimisation is an essential factor for performance of your internet business.
-                        Visibility to potential customers on major search engines is important to generate
-                        a maximum quantity of visits...
-                    </p>
-                    <a href="#">VIEW MORE > </a>
+                    <p>Haytech Solutions uses the know-how of its team to serve businesses by developing IT programs and software that meet internal need and external requirements. We develop reliable, secure and efficient IT solutions that are suitable to your business strategy.</p>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -147,7 +215,7 @@
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
                     </p>
-                    <a href="#">VIEW MORE > </a>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -161,11 +229,9 @@
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
                     <h4>Search Engine Optimisation</h4>
-                    <p>Search engine optimisation is an essential factor for performance of your internet business.
-                        Visibility to potential customers on major search engines is important to generate
-                        a maximum quantity of visits...
+                    <p>Search engine optimisation is an essential factor for performance of your internet business. Visibility to potential customers on major search engines is important to generate a maximum quantity of visits...
                     </p>
-                    <a href="#">VIEW MORE > </a>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -179,11 +245,9 @@
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
                     <h4>Web hosting</h4>
-                    <p>Search engine optimisation is an essential factor for performance of your internet business.
-                        Visibility to potential customers on major search engines is important to generate
-                        a maximum quantity of visits...
+                    <p>Discover our data hosting services to safely host all your data. Since 1998 Haytech Solutions has been developing hosting solutions integrating the latest technology in operating systems Windows, Linux, Unix...
                     </p>
-                    <a href="#">VIEW MORE > </a>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -196,12 +260,9 @@
                     <img src="img/icon-5.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>Security, Sistem, Network</h4>
-                    <p>Search engine optimisation is an essential factor for performance of your internet business.
-                        Visibility to potential customers on major search engines is important to generate
-                        a maximum quantity of visits...
-                    </p>
-                    <a href="#">VIEW MORE > </a>
+                    <h4>Security, System, Network</h4>
+                    <p>We carry out the integration of your IT pool and work on the elaboration of high rate flow networks SDSL, FIBRE, SATELLITE including the systems Novell, Windows Server, Linux as well as the messaging , backups, gateways... </p>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -219,7 +280,7 @@
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
                     </p>
-                    <a href="#">VIEW MORE > </a>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -232,12 +293,12 @@
                     <img src="img/icon-6.png" alt="">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12">
-                    <h4>Security access</h4>
+                    <h4>Security Access</h4>
                     <p>Search engine optimisation is an essential factor for performance of your internet business.
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
                     </p>
-                    <a href="#">VIEW MORE > </a>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -255,7 +316,7 @@
                         Visibility to potential customers on major search engines is important to generate
                         a maximum quantity of visits...
                     </p>
-                    <a href="#">VIEW MORE > </a>
+                    <a href="ourService.html">VIEW MORE > </a>
                 </div>
             </div>
         </div>
@@ -339,39 +400,30 @@
             </div>
             <div class="container information">
                 <div class="row">
-                        <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="col-md-4 col-sm-4 col-xs-12">
                         <p>
                             <span class="fa-stack fa-lg">
                               <i class="fa fa-phone"></i>
                             </span>
                             +374 (0)41 516 143
                         </p>
-                        <p>Work times 11:00 - 20:00 PM  <span>MO-FR</span></p>
-                            <p>
+                        <p>
                                 <span class="fa-stack fa-lg">
                                  <i class="fa fa-envelope-o" aria-hidden="true"></i>
                                 </span>
-                                Lorem Ipsum is simply dummy text of the printing
-                            </p>
-                            <p>
-                                <span class="fa-stack fa-lg pull-left">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                </span>
-                                Lorem Ipsum is simply dummy text of the printing and
-                                typesetting industry. Lorem Ipsum the industry's
-                            </p>
-                            <div class="social">
-                                <a href="#"><img src="img/istagram-icon.png"  alt="instagram"></a>
-                                <a href="#"><img src="img/facebook-icon.png"  alt="facebook"></a>
-                            </div>
+                            <a class="con-A" href="contact.html">Contact us</a>
+                        </p>
+                        <p>Work times 11:00 - 20:00 PM </p>
                     </div>
                     <div class="col-md-5 col-sm-5 col-xs-12">
                         <div class="mail">
                             <form method="post" id="contact-page-form">
-                                <input type="text" placeholder="EMAIL" data-validetta="required">
+                                <div class="valid-input">
+                                <input type="text" placeholder="EMAIL" data-validetta="required,email">
                                 <button>SEND</button>
+                                </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" rows="5" id="comment" placeholder="Your message"></textarea>
+                                    <textarea class="form-control" rows="5" id="comment" placeholder="Your message" data-validetta="required"></textarea>
                                 </div>
                             </form>
                         </div>
@@ -379,11 +431,11 @@
                     <div class="col-md-3 col-sm-3 col-xs-12">
                         <ul>
                             <li><a href="index.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT US</a></li>
                             <li><a href="ourService.html">OUR SERVICE</a></li>
                             <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                             <li><a href="reqruitment.html">RECRUITMENT</a></li>
                             <li><a href="partners.html">PARTNERS</a></li>
+                            <li><a href="about.html">ABOUT US</a></li>
                             <li><a href="contact.html">CONTACTS</a></li>
                         </ul>
                     </div>
