--- a/reqruitment.html
+++ b/reqruitment.html
@@ -35,7 +35,6 @@
                     <label>
                         <select class="selectpicker1" data-width="fit">
                             <option>ENG</option>
-                            <option>FR</option>
                         </select>
                     </label>
                 </div>
@@ -47,11 +46,11 @@
                     <hr class="hr-navbarMenu">
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="ourService.html">OUR SERVICE</a></li>
                         <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                         <li><a href="reqruitment.html" class="active">RECRUITMENT</a></li>
                         <li><a href="partners.html">PARTNERS</a></li>
+                        <li><a href="about.html">ABOUT US</a></li>
                         <li><a href="contact.html">CONTACTS</a></li>
                     </ul>
                 </div>
@@ -81,7 +80,7 @@
                 </button>
                 <div id="collapseExample1" class="collapse">
                     <ul class="nav nav-tabs nav-stacked text-center" role="tablist">
-                        <li role="presentation"><a href="#home3" aria-controls="home3" role="tab" data-toggle="tab">Designer</a></li>
+                        <li class="active" role="presentation"><a href="#home3" aria-controls="home3" role="tab" data-toggle="tab">Designer</a></li>
                     </ul>
                 </div>
             </div>
@@ -91,7 +90,7 @@
                 </button>
                 <div id="collapseExample2" class="collapse">
                     <ul class="nav nav-tabs nav-stacked text-center" role="tablist">
-                        <li role="presentation"><a href="#home4" aria-controls="home4" role="tab" data-toggle="tab">Q A</a></li>
+                        <li class="active" role="presentation"><a href="#home4" aria-controls="home4" role="tab" data-toggle="tab">Q A</a></li>
                     </ul>
                 </div>
             </div>
@@ -101,7 +100,7 @@
                 </button>
                 <div id="collapseExample3" class="collapse">
                     <ul class="nav nav-tabs nav-stacked text-center" role="tablist">
-                        <li role="presentation"><a href="#home5" aria-controls="home5" role="tab" data-toggle="tab">System and Networcks</a></li>
+                        <li class="active" role="presentation"><a href="#home5" aria-controls="home5" role="tab" data-toggle="tab">System and Networcks</a></li>
                     </ul>
                 </div>
             </div>
@@ -111,7 +110,7 @@
                 </button>
                 <div id="collapseExample4" class="collapse">
                     <ul class="nav nav-tabs nav-stacked text-center" role="tablist">
-                        <li role="presentation"><a href="#home6" aria-controls="home6" role="tab" data-toggle="tab">Business Analyst</a></li>
+                        <li class="active" role="presentation"><a href="#home6" aria-controls="home6" role="tab" data-toggle="tab">Business Analyst</a></li>
                     </ul>
                 </div>
             </div>
