--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,6 @@
                 <label>
                     <select class="selectpicker1" data-width="fit">
                         <option>ENG</option>
-                        <option>FR</option>
                     </select>
                 </label>
             </div>
@@ -47,11 +46,11 @@
                 <hr class="hr-navbarMenu">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="ourService.html">OUR SERVICE</a></li>
                     <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                     <li><a href="reqruitment.html">RECRUITMENT</a></li>
                     <li><a href="partners.html">PARTNERS</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="contact.html" class="active">CONTACTS</a></li>
                 </ul>
             </div>
@@ -73,32 +72,23 @@
                             </span>
                     +374 (0)41 516 143
                 </p>
-                <p>Work times 11:00 - 20:00 PM  <span>MO-FR</span></p>
                 <p>
                                 <span class="fa-stack fa-lg">
                                  <i class="fa fa-envelope-o" aria-hidden="true"></i>
                                 </span>
-                    Lorem Ipsum is simply dummy text of the printing
+                                 <a class="con-A" href="contact.html">Contact us</a>
                 </p>
-                <p>
-                                <span class="fa-stack fa-lg pull-left">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                </span>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum the industry's
-                </p>
-                <div class="social">
-                    <a href="#"><img src="img/istagram-icon.png"  alt="instagram"></a>
-                    <a href="#"><img src="img/facebook-icon.png"  alt="facebook"></a>
-                </div>
+                <p>Work times 11:00 - 20:00 PM </p>
             </div>
             <div class="col-md-5 col-sm-5 col-xs-12">
                 <div class="mail">
                     <form method="post" id="contact-page-form">
-                    <input type="text" placeholder="EMAIL" data-validetta="required">
-                    <button>SEND</button>
+                        <div class="valid-input">
+                            <input type="text" placeholder="EMAIL" data-validetta="required,email">
+                            <button>SEND</button>
+                        </div>
                         <div class="form-group">
-                            <textarea class="form-control" rows="5" id="comment" placeholder="Your message"></textarea>
+                            <textarea class="form-control" rows="5" id="comment" placeholder="Your message" data-validetta="required"></textarea>
                         </div>
                     </form>
                 </div>
@@ -106,11 +96,11 @@
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="ourService.html">OUR SERVICE</a></li>
                     <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                     <li><a href="reqruitment.html">RECRUITMENT</a></li>
                     <li><a href="partners.html">PARTNERS</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="contact.html">CONTACTS</a></li>
                 </ul>
             </div>
