--- a/ourService.html
+++ b/ourService.html
@@ -36,23 +36,22 @@
             <label>
                 <select class="selectpicker1" data-width="fit">
                     <option>ENG</option>
-                    <option>FR</option>
                 </select>
             </label>
         </div>
         <div class="mobile-nav-button">
             <a class="mobile-nav-trigger"><i class="fa fa-bars" aria-hidden="true"></i></a>
         </div>
-        <a  href="#"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
+        <a href="index.html"><img class="secLogo" src="img/secondPageLogo.png" alt=""></a>
         <div class="main-navbar">
             <hr class="hr-navbarMenu">
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="ourService.html" class="active">OUR SERVICE</a></li>
                 <li><a href="adduction.html">ADDUCTION AND INFORMATION</a></li>
                 <li><a href="reqruitment.html">RECRUITMENT</a></li>
                 <li><a href="partners.html">PARTNERS</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="contact.html">CONTACTS</a></li>
             </ul>
         </div>
@@ -65,17 +64,19 @@
 
     <div class="container">
         <ul class="test1 nav nav-tabs col-md-12 col-xs-12">
-            <li class="active col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu1"><p>1</p><span>Web Design</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu2"><p>2</p><span>Search engine Optimisation</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu3"><p>3</p><span>Web hosting</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
-            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu4"><p>4</p><span>Applications and Software</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="active col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu4"><p>1</p><span>Applications and Software</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu7"><p>2</p><span>Web Creation</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu2"><p>3</p><span>Search engine Optimisation</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu3"><p>4</p><span>Web Hosting</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
             <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu5"><p>5</p><span>Systems and Network</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
             <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu6"><p>6</p><span>VOIP solutions</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu1"><p>7</p><span>Web Design</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
+            <li class="col-sm-2 col-xs-6"><a data-toggle="tab" href="#menu8"><p>8</p><span>Controll and allarm</span><i class="glyphicon glyphicon-menu-down animated fadeInDown"></i></a></li>
         </ul>
         <div class="tab-content">
-            <div id="menu1" class="tab-pane fade in active">
+            <div id="menu1" class="tab-pane fade">
                 <div class="menuback">
-                    <p>You need a powerful communication tool for your business that is secure and appealing? Haytech Solutions offers more than just web design by delivering a professional website that suits perfectly to the requirements of your industry and your company’s products.</p>
+                    <p>You need a powerful communication tool for your business that is secure and appealing? Haytech Solutions offers more than just web design by delivering a professional website that suits perfectly to the requirements of your industry and your company’s products. </p>
                     <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites that we create assure the facility of the search, they are the pledge of an expanded search</p>
                 </div>
                 <div class="row">
@@ -92,13 +93,13 @@
                         <img src="img/2.jpg" alt="">
                     </div>
                     <div class="col-md-6 foot-text">
-                        <p><span> > </span>A professional assessment and complete analysis</p>
-                        <p><span> > </span>A professional assessment and complete analysis</p>
-                        <p><span> > </span>A professional assessment and complete analysis</p>
-                        <p><span> > </span>A professional assessment and complete analysis</p>
-                        <p><span> > </span>A professional assessment and complete analysis</p>
-                        <p><span> > </span>A professional assessment and complete analysis</p>
-                        <p><span> > </span>A professional assessment and complete analysis</p>
+                        <p><span> > </span>A professional assessment and complete analysis of your needs, to find appropriate solutions for your business</p>
+                        <p><span> > </span>Development of technical, marketing and strategic specifications</p>
+                        <p><span> > </span>Development and prototyping of graphical user interfaces</p>
+                        <p><span> > </span>Implementation of easy-to-use features (for the company as well as for the end costumer)</p>
+                        <p><span> > </span>Implementation of testing phases</p>
+                        <p><span> > </span>Search engine optimization of major search engines</p>
+                        <p><span> > </span>Company trainings for use of the features and post-design service.</p>
                     </div>
                 </div>
             </div>
@@ -127,21 +128,32 @@
                     <div>  <span> > </span> <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites You need a powerful communication tool for your business that is secure and appealing? that we create assure the facility of the search, they are the pledge of an expanded search</p></div>
                 </div>
             </div>
-            <div id="menu4" class="tab-pane fade">
+            <div id="menu4" class="tab-pane fade in active">
                 <div class="row">
                     <div class="col-md-6 img-col ">
                         <img src="img/111.jpg" alt="">
                     </div>
                         <div class="col-md-6 col-text">
-                            <p>You need a powerful communication tool for your business that is secure and appealing? Haytech Solutions offers more than just web design by delivering a professional website that suits perfectly to the requirements of your industry and your company’s products.</p>
-                            <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites that we create assure the facility of the search, they are the pledge of an expanded search</p>
+                            <p>Haytech Solutions uses the know-how of its team to serve businesses by developing IT programs and software that meet internal need and external requirements. We develop reliable, secure and efficient IT solutions that are suitable to your business strategy. With a competitive price, they also fit in your budget.</p>
+                            <p>The advantage of this approach: it will help the company to save time every day and increase productivity significantly by using customized tools. Our post-programming team, consisting of auditors and consultants, works closely with your company to advise you on the best use of the developed applications and show all the tricks.</p>
                         </div>
                 </div>
             </div>
             <div id="menu5" class="tab-pane fade">
                 <div class="col-text">
                     <h3>Haytech Solutions develop network facilities that meet all the needs of the customer.</h3>
-                    <p>You need a powerful communication tool for your business that is secure and appealing? Haytech Solutions offers more than just web design by delivering You need a powerful communication tool for your business that is secure and appealing? Haytech Solutions offers more than just web design by delivering a professional website that suits perfectly to the requirements of your industry and your company’s products.</p>
+                    <p>We carry out the integration of your IT pool and work on the elaboration of high rate flow networks SDSL, FIBRE, SATELLITE including the systems Novell, Windows Server, Linux as well as the messaging , backups, gateways, firewalls and other necessary security systems that are essential for operating your business network. We also offer optical fiber installation. </p>
+                    <p>Whether it is a new installation or a change (update to new standards, network expansion, network problems, etc), our technical consultants will advise you and respond at best to all expectations of your business in network development. </p>
+                 </div>
+                <div class="col-md-12">
+                    <img src="img/1.png" alt="">
+                </div>
+            </div>
+            <div id="menu7 menu5" class="tab-pane fade">
+                <div class="col-text">
+                    <h3>Haytech Solutions develop network facilities that meet all the needs of the customer.</h3>
+                    <p>We carry out the integration of your IT pool and work on the elaboration of high rate flow networks SDSL, FIBRE, SATELLITE including the systems Novell, Windows Server, Linux as well as the messaging , backups, gateways, firewalls and other necessary security systems that are essential for operating your business network. We also offer optical fiber installation. </p>
+                    <p>Whether it is a new installation or a change (update to new standards, network expansion, network problems, etc), our technical consultants will advise you and respond at best to all expectations of your business in network development. </p>
                  </div>
                 <div class="col-md-12">
                     <img src="img/1.png" alt="">
@@ -150,24 +162,25 @@
             <div id="menu6" class="tab-pane fade">
                 <div class="col-md-12">
                     <div class="menuback">
-                        <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites that we create assur.e the facility of the search, they are the pledge of an expanded search</p>
+                        <p>Broaden your business communication by using smart phones ! By constantly searching for innovative and efficient technologies for its customers, Haytech Solutions offers VoIP telephony services.</p>
                         <h3>What is the VoIP telephony?</h3>
-                        <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites that we create assur.</p>
+                        <p>The VoIP telephony (Voice-over-IP) carries phone calls over an IP data network, whether on the internet or your own internal network.</p>
                         <h3>What are the advantages of VoIP telephony?</h3>
-                        <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites that we create assur.</p>
+                        <p>The main advantage of using VoIP is the saving of cost calls since calls pass directly via the IP network and not through the network of a phone provider. </p>
                         <div class="footer-tab">
-                            <p><span> > </span>A professional assessment and complete analysis</p>
-                            <p><span> > </span>A professional assessment and complete analysis</p>
-                            <p><span> > </span>A professional assessment and complete analysis</p>
-                            <p><span> > </span>A professional assessment and complete analysis</p>
+                            <p><span> > </span>You can work remotely, a simple internet connection is all you need.</p>
+                            <p><span> > </span>You profit from a secure tool for voice and data communication</p>
+                            <p><span> > </span>You can check the availability of your employees and see how to contact them</p>
+                            <p><span> > </span>You can make use of numerous features:</p>
                         </div>
                         <div class="col-md-9">
                         <div class="voiceCalls">
                             <p> -  Voice mail (direct accsess from the computer)</p>
                             <p> -  Caller ID</p>
                             <p> -  Conferance calls</p>
+                            <p> -  Transfer</p>
                             <p> -  Unlimited long distance calls</p>
-                        <p>Whether it is the creation of a new tool or the optimisation of an existing tool, the websites that we create assur.</p>
+                        <p>And you profit from many other advantages to optimise the quality and productivity of work in your company.</p>
                         </div>
                         </div>
                         <div class="col-md-3 phone-img">
@@ -176,6 +189,17 @@
                     </div>
                 </div>
             </div>
+            <div id="menu8 menu5" class="tab-pane fade">
+                <div class="col-text">
+                    <h3>Haytech Solutions develop network facilities that meet all the needs of the customer.</h3>
+                    <p>We carry out the integration of your IT pool and work on the elaboration of high rate flow networks SDSL, FIBRE, SATELLITE including the systems Novell, Windows Server, Linux as well as the messaging , backups, gateways, firewalls and other necessary security systems that are essential for operating your business network. We also offer optical fiber installation. </p>
+                    <p>Whether it is a new installation or a change (update to new standards, network expansion, network problems, etc), our technical consultants will advise you and respond at best to all expectations of your business in network development. </p>
+                </div>
+                <div class="col-md-12">
+                    <img src="img/1.png" alt="">
+                </div>
+            </div>
+
         </div>
     </div>
 
